# sim

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
SDL2/: INSTALL_RECEIPT.json
SDL2/lib/: libSDL2-2.0.0.dylib
SDL2/lib/pkgconfig/: sdl2.pc
include/physics/: app.h  body.h  collision.h  controller.h  environment.h  view.h
src/: CMakeLists.txt  app.cpp  app.h  body.cpp  body.h  collision.cpp  collision.h  controller.h  core.h  effects.cpp  environment.cpp  environment.h  main.cpp  renderer.cpp  testEnv.cpp  testEnv.h  view.cpp  view.h
src/angryBirds/: CMakeLists.txt  env.cpp
src/dev/: CMakeLists.txt  envs.cpp
src/physics/: CMakeLists.txt  app.cpp  body.cpp  collision.cpp  effects.cpp  environment.cpp  view.cpp
